# wagtail-guide

./: .coveragerc  .gitignore  AUTHORS.md  CHANGELOG.md  LICENSE.txt  README.md  setup.cfg  setup.py
src/wagtail_guide/: __init__.py  conf.py  setup.cfg
src/wagtail_guide/factories/: __init__.py  markdown.py  mixins.py  video.py
src/wagtail_guide/management/commands/: build_guide.py
src/wagtail_guide/markdown/: __init__.py  demo.py  getting_started.py
src/wagtail_guide/tests/: conftest.py  test_main.py
src/wagtail_guide/video/: __init__.py  getting_started.py
tests/: conftest.py
